[project]
name = "agemcp"
version = "0.3.0"
description = "PostgreSQL MCP"
readme = "README.md"
authors = [
    { name = "veloper" }
]
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.4",
    "blinker>=1.9.0",
    "click>=8.2.1",
    "dotenv>=0.9.9",
    "fastmcp>=2.8.1",
    "httpx>=0.28.1",
    "nanoid>=2.0.0",
    "networkx>=3.5",
    "numpy>=1.26.4,<2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "pyvis>=0.3.2",
    "requests>=2.32.4",
    "sh>=2.2.2",
    "snakeviz>=2.2.2",
    "sqlalchemy-utils>=0.41.2",
    "sqlalchemy[asyncio]>=2.0.41",
]

[project.scripts]
agemcp = "agemcp:cli.main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-sugar>=1.0.0",
    "pytest-timeout>=2.4.0"
]

[tool.pytest.ini_options]
describe_prefixes = ["describe_"]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
